# i3-conf-searcher

./: Cargo.toml  README.md
.github/workflows/: converage_2.yml  coverage.yml  full_ci.yml  general-windows.yml  general.yml  rust.yml
pictures/: i3_conf_searcher_modifiers.webm
src/: i3_config.rs  keyboard_controller.rs  main.rs  style.rs
