[package]
name = "i3-conf-searcher"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"


homepage = "https://github.com/dmweis/i3-conf-searcher"
repository = "https://github.com/dmweis/i3-conf-searcher"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-i3ipc = "0.10"
tokio = "0.2"
futures = "0.3"
regex = "1.3"
fuzzy-matcher = "0.3"
# iced = { git = "https://github.com/hecrj/iced", features = ["debug", "tokio"] }
iced = { version = "0.1", features = ["debug", "tokio"] }
