[package]
name = "i3-conf-searcher"
version = "0.3.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"


homepage = "https://github.com/dmweis/i3-conf-searcher"
repository = "https://github.com/dmweis/i3-conf-searcher"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = "1.5"
futures = "0.3"
regex = "1.3"
fuzzy-matcher = "0.3"
iced = { version = "0.3", features = ["debug", "tokio"] }
iced_native = "0.4"
clap = "3.0.0-beta.1"
thiserror = "1.0"
[target.'cfg(unix)'.dependencies]
tokio-i3ipc = "0.12"